src/main/java/com/anshishagua/pig/PigParser.java
// Generated from /Users/lixiao/code/common-utils/src/main/resources/Pig.g4 by ANTLR 4.7
package com.anshishagua.pig;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PigParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, LOAD=3, INTEGER=4, LONGINTEGER=5, UNDER_SCORE=6, DOLAR=7, 
		SEMI_COLON=8, SINGLE_QUOTE=9, USING=10, LEFT_PAREN=11, RIGHT_PAREN=12, 
		AS=13, COLON=14, MAP=15, TUPLE=16, STAR=17, PATH_SEP=18, BOOLEAN_TYPE=19, 
		INT_TYPE=20, LONG_TYPE=21, FLOAT_TYPE=22, DOUBLE_TYPE=23, CHARARRAY_TYPE=24, 
		BYTEARRAY_TYPE=25, DATETIME_TYPE=26, BIGINTEGER_TYPE=27, BIGDECIMAL_TYPE=28, 
		COMMA=29, PARTITION=30, UNION=31, ALL=32, LEFT=33, RIGHT=34, FULL=35, 
		OUTER=36, ONSCHEMA=37, LEFT_BRACE=38, RIGHT_BRACE=39, JOIN=40, PARALLEL=41, 
		GROUP=42, SET=43, STR_OP_EQ=44, STR_OP_GT=45, STR_OP_LT=46, STR_OP_GTE=47, 
		STR_OP_LTE=48, STR_OP_NE=49, STR_OP_MATCHES=50, DOUBLENUMBER=51, TRUE=52, 
		FALSE=53, FLATTERN=54, QUOTEDSTRING=55, FLOATNUMBER=56, PERIOD=57, BY=58, 
		FILTER=59, DISTINCT=60, PARAM_PATTERN=61, INTO=62, STORE=63, FOREACH=64, 
		GENERATE=65, ASSIGN=66, PLUS=67, MINUS=68, MUL=69, DIV=70, MOD=71, QMARK=72, 
		AND=73, OR=74, NOT=75, IN=76, EQ=77, NEQ=78, LT=79, LTE=80, GT=81, GTE=82, 
		IS=83, NULL=84, IDENTIFIER=85, DOLLAR_VAR=86, END_OF_LINE_COMMENT=87, 
		COMMENT=88, WS=89;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_field = 2, RULE_dataType = 3, 
		RULE_fieldDefinetion = 4, RULE_function = 5, RULE_bbb = 6, RULE_setStatement = 7, 
		RULE_propertyValue = 8, RULE_loadStatement = 9, RULE_loadClause = 10, 
		RULE_schema = 11, RULE_forEachStatement = 12, RULE_foreach_generate_simple = 13, 
		RULE_foreach_plan_complex = 14, RULE_flatten_generated_item = 15, RULE_generate_as_clause = 16, 
		RULE_field_def_list = 17, RULE_field_def = 18, RULE_explicit_field_def = 19, 
		RULE_flatten_clause = 20, RULE_nested_blk = 21, RULE_nested_command = 22, 
		RULE_storeStatement = 23, RULE_distinctStatement = 24, RULE_filterStatement = 25, 
		RULE_joinStatement = 26, RULE_joinClause = 27, RULE_joinType = 28, RULE_joinSubClause = 29, 
		RULE_joinItem = 30, RULE_joinGroupByClause = 31, RULE_arg = 32, RULE_rel = 33, 
		RULE_partitionCaluse = 34, RULE_parallelClause = 35, RULE_groupStatement = 36, 
		RULE_unionStatement = 37, RULE_directory = 38, RULE_condition = 39, RULE_andCondition = 40, 
		RULE_notCondition = 41, RULE_unaryCondition = 42, RULE_expr = 43, RULE_multiExpr = 44, 
		RULE_basicExpression = 45, RULE_castType = 46, RULE_castExpr = 47, RULE_parenExpr = 48, 
		RULE_scalar = 49, RULE_relOp = 50, RULE_relStrOp = 51, RULE_nullExpression = 52, 
		RULE_className = 53;
	public static final String[] ruleNames = {
		"program", "statement", "field", "dataType", "fieldDefinetion", "function", 
		"bbb", "setStatement", "propertyValue", "loadStatement", "loadClause", 
		"schema", "forEachStatement", "foreach_generate_simple", "foreach_plan_complex", 
		"flatten_generated_item", "generate_as_clause", "field_def_list", "field_def", 
		"explicit_field_def", "flatten_clause", "nested_blk", "nested_command", 
		"storeStatement", "distinctStatement", "filterStatement", "joinStatement", 
		"joinClause", "joinType", "joinSubClause", "joinItem", "joinGroupByClause", 
		"arg", "rel", "partitionCaluse", "parallelClause", "groupStatement", "unionStatement", 
		"directory", "condition", "andCondition", "notCondition", "unaryCondition", 
		"expr", "multiExpr", "basicExpression", "castType", "castExpr", "parenExpr", 
		"scalar", "relOp", "relStrOp", "nullExpression", "className"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'|'", "'AAAAA'", "'LOAD'", null, null, "'_'", "'$'", "';'", "'''", 
		"'USING'", "'('", "')'", "'AS'", "':'", "'map'", "'tuple'", null, null, 
		"'boolean'", "'int'", "'long'", "'float'", "'double'", "'chararray'", 
		"'bytearray'", "'datetime'", "'biginteger'", "'bigdecimal'", "','", "'PARTITION'", 
		"'UNION'", "'ALL'", "'LEFT'", "'RIGHT'", "'FULL'", "'OUNTER'", "'ONSCHEMA'", 
		"'{'", "'}'", "'JOIN'", "'PARALLEL'", "'GROUP'", "'SET'", "'EQ'", "'GT'", 
		"'LT'", "'GTE'", "'LTE'", "'NEQ'", null, null, "'TRUE'", "'FALSE'", "'FLATTERN'", 
		null, null, "'.'", "'BY'", "'FILTER'", "'DISTINCT'", "'###'", "'INTO'", 
		"'STORE'", "'FOREACH'", "'GENERATE'", "'='", "'+'", "'-'", null, null, 
		"'%'", "'?'", "'AND'", "'OR'", "'NOT'", "'IN'", "'=='", "'!='", "'<'", 
		"'<='", "'>'", "'>='", "'is'", "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "LOAD", "INTEGER", "LONGINTEGER", "UNDER_SCORE", "DOLAR", 
		"SEMI_COLON", "SINGLE_QUOTE", "USING", "LEFT_PAREN", "RIGHT_PAREN", "AS", 
		"COLON", "MAP", "TUPLE", "STAR", "PATH_SEP", "BOOLEAN_TYPE", "INT_TYPE", 
		"LONG_TYPE", "FLOAT_TYPE", "DOUBLE_TYPE", "CHARARRAY_TYPE", "BYTEARRAY_TYPE", 
		"DATETIME_TYPE", "BIGINTEGER_TYPE", "BIGDECIMAL_TYPE", "COMMA", "PARTITION", 
		"UNION", "ALL", "LEFT", "RIGHT", "FULL", "OUTER", "ONSCHEMA", "LEFT_BRACE", 
		"RIGHT_BRACE", "JOIN", "PARALLEL", "GROUP", "SET", "STR_OP_EQ", "STR_OP_GT", 
		"STR_OP_LT", "STR_OP_GTE", "STR_OP_LTE", "STR_OP_NE", "STR_OP_MATCHES", 
		"DOUBLENUMBER", "TRUE", "FALSE", "FLATTERN", "QUOTEDSTRING", "FLOATNUMBER", 
		"PERIOD", "BY", "FILTER", "DISTINCT", "PARAM_PATTERN", "INTO", "STORE", 
		"FOREACH", "GENERATE", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", "MOD", 
		"QMARK", "AND", "OR", "NOT", "IN", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", 
		"IS", "NULL", "IDENTIFIER", "DOLLAR_VAR", "END_OF_LINE_COMMENT", "COMMENT", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pig.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PigParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PigParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigVisitor ) return ((PigVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 43)) & ~0x3f) == 0 && ((1L << (_la - 43)) & ((1L << (SET - 43)) | (1L << (STORE - 43)) | (1L << (IDENTIFIER - 43)) | (1L << (COMMENT - 43)))) != 0)) {
				{
				{
				setState(108);
				statement();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(PigParser.COMMENT, 0); }
		public SetStatementContext setStatement() {
			return getRuleContext(SetStatementContext.class,0);
		}
		public LoadStatementContext loadStatement() {
			return getRuleContext(LoadStatementContext.class,0);
		}
		public ForEachStatementContext forEachStatement() {
			return getRuleContext(ForEachStatementContext.class,0);
		}
		public StoreStatementContext storeStatement() {
			return getRuleContext(StoreStatementContext.class,0);
		}
		public DistinctStatementContext distinctStatement() {
			return getRuleContext(DistinctStatementContext.class,0);
		}
		public FilterStatementContext filterStatement() {
			return getRuleContext(FilterStatementContext.class,0);
		}
		public JoinStatementContext joinStatement() {
			return getRuleContext(JoinStatementContext.class,0);
		}
		public GroupStatementContext groupStatement() {
			return getRuleContext(GroupStatementContext.class,0);
		}
		public UnionStatementContext unionStatement() {
			return getRuleContext(UnionStatementContext.class,0);
		}
		public TerminalNode END_OF_LINE_COMMENT() { return getToken(PigParser.END_OF_LINE_COMMENT, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigVisitor ) return ((PigVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(COMMENT);
				}
				break;
			case SET:
			case STORE:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(117);
					setStatement();
					}
					break;
				case 2:
					{
					setState(118);
					loadStatement();
					}
					break;
				case 3:
					{
					setState(119);
					forEachStatement();
					}
					break;
				case 4:
					{
					setState(120);
					storeStatement();
					}
					break;
				case 5:
					{
					setState(121);
					distinctStatement();
					}
					break;
				case 6:
					{
					setState(122);
					filterStatement();
					}
					break;
				case 7:
					{
					setState(123);
					joinStatement();
					}
					break;
				case 8:
					{
					setState(124);
					groupStatement();
					}
					break;
				case 9:
					{
					setState(125);
					unionStatement();
					}
					break;
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==END_OF_LINE_COMMENT) {
					{
					setState(128);
					match(END_OF_LINE_COMMENT);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PigParser.IDENTIFIER, 0); }
		public TerminalNode DOLAR() { return getToken(PigParser.DOLAR, 0); }
		public TerminalNode INTEGER() { return getToken(PigParser.INTEGER, 0); }
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).exitField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigVisitor ) return ((PigVisitor<? extends T>)visitor).visitField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_field);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(IDENTIFIER);
				}
				break;
			case DOLAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(DOLAR);
				setState(135);
				match(INTEGER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public TerminalNode BOOLEAN_TYPE() { return getToken(PigParser.BOOLEAN_TYPE, 0); }
		public TerminalNode INT_TYPE() { return getToken(PigParser.INT_TYPE, 0); }
		public TerminalNode LONG_TYPE() { return getToken(PigParser.LONG_TYPE, 0); }
		public TerminalNode FLOAT_TYPE() { return getToken(PigParser.FLOAT_TYPE, 0); }
		public TerminalNode DOUBLE_TYPE() { return getToken(PigParser.DOUBLE_TYPE, 0); }
		public TerminalNode CHARARRAY_TYPE() { return getToken(PigParser.CHARARRAY_TYPE, 0); }
		public TerminalNode BYTEARRAY_TYPE() { return getToken(PigParser.BYTEARRAY_TYPE, 0); }
		public TerminalNode DATETIME_TYPE() { return getToken(PigParser.DATETIME_TYPE, 0); }
		public TerminalNode BIGINTEGER_TYPE() { return getToken(PigParser.BIGINTEGER_TYPE, 0); }
		public TerminalNode BIGDECIMAL_TYPE() { return getToken(PigParser.BIGDECIMAL_TYPE, 0); }
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).enterDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).exitDataType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigVisitor ) return ((PigVisitor<? extends T>)visitor).visitDataType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dataType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN_TYPE) | (1L << INT_TYPE) | (1L << LONG_TYPE) | (1L << FLOAT_TYPE) | (1L << DOUBLE_TYPE) | (1L << CHARARRAY_TYPE) | (1L << BYTEARRAY_TYPE) | (1L << DATETIME_TYPE) | (1L << BIGINTEGER_TYPE) | (1L << BIGDECIMAL_TYPE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldDefinetionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PigParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(PigParser.COLON, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public FieldDefinetionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDefinetion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).enterFieldDefinetion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).exitFieldDefinetion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigVisitor ) return ((PigVisitor<? extends T>)visitor).visitFieldDefinetion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldDefinetionContext fieldDefinetion() throws RecognitionException {
		FieldDefinetionContext _localctx = new FieldDefinetionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fieldDefinetion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(IDENTIFIER);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(141);
				match(COLON);
				setState(142);
				dataType();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PigParser.IDENTIFIER, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(PigParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(PigParser.RIGHT_PAREN, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigVisitor ) return ((PigVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(IDENTIFIER);
			setState(146);
			match(LEFT_PAREN);
			setState(147);
			match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BbbContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PigParser.IDENTIFIER, 0); }
		public BbbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bbb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).enterBbb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigListener ) ((PigListener)listener).exitBbb(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigVisitor ) return ((PigVisitor<? extends T>)visitor).visitBbb(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BbbContext bbb() throws RecognitionException {
		BbbContext _localctx = new BbbContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bbb);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
